доабвленые элементы ui дизаина

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+    <string name="min">min</string>
+    <string name="max">max</string>
 </resources>
